# aws-sso-auth

./: .github_changelog_generator  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  coverage.yml  gitleaks.yml  release.yml  test.yml
docs/: pre-commit.md
scripts/: install.sh
src/: argparse.rs  cli.rs  config.rs  lib.rs  logger.rs  main.rs  utils.rs
src/commands/: config.rs  mod.rs  start.rs
