[package]
name = "aws-sso-rs"
version = "0.1.0"
edition = "2021"
authors = ["containerscrew info@containerscrew.com"]
rust-version = "1.72.0"


[dependencies]
aws-config = "0.56.1"
aws-sdk-sso = "0.31.1"
aws-sdk-ssooidc = "0.31.2"
clap = { version = "4.4.4", features = ["derive"] }
configparser = "3.0.2"
current_platform = "0.2.0"
env_logger = "0.10.0"
home = "0.5.5"
log = "0.4.20"
tokio = { version = "1.15", features = ["full"] }
webbrowser = "0.8.11"
