[package]
name = "aws-sso-auth"
version = "0.1.0"
edition = "2021"
authors = ["containerscrew info@containerscrew.com"]
rust-version = "1.72.0"


[dependencies]
aws-config = "0.56.1"
aws-sdk-sso = "0.32.0"
aws-sdk-ssooidc = "0.32.0"
clap = { version = "4.4.4", features = ["derive"] }
configparser = "3.0.2"
current_platform = "0.2.0"
env_logger = "0.10.0"
home = "0.5.5"
log = "0.4.20"
tokio = { version = "1.15", features = ["full"] }
webbrowser = "0.8.11"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
colored = "2.0.4"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
tracing = "0.1.40"
shellexpand = "3.1.0"
